--- a/src/ls/workbench/browser/parts/sidebar/media/sidebarTopbarActions.css
+++ b/src/ls/workbench/browser/parts/sidebar/media/sidebarTopbarActions.css
@@ -3,6 +3,7 @@
   align-items: center;
   min-width: 0;
   height: 100%;
+  padding-inline-start: 8px;
 }
 
 .sidebar-topbar-actions {
@@ -10,7 +11,7 @@
   align-items: center;
   min-width: 0;
   height: 100%;
-  margin-left: 6px;
+  margin-left: 0;
   -webkit-app-region: no-drag;
 }
 
